--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vanilla App Template</title>
   <link rel="stylesheet" href="./css/styles.css" />
+
+
 </head>
 
 <body>
-  <load="partials/header.html" />
+  <load="partials\header.html" />
 
   <section>
     <h1>Example page title</h1>
@@ -19,7 +21,7 @@
   </section>
 
   <!-- Loads the specified .html file -->
-  <load="partials/vite-promo.html" />
+  <load="partials\vite-promo.html" />
 
 </body>
 
