--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,19 @@
 </head>
 
 <body>
-  <load="partials\header.html" />
+  <header class="header">
+    <nav class="nav">
+      <li class="nav-item">
+        <a href="../01-gallery.html" class="nav-link">Gallery</a>
+      </li>
+      </li>
 
-  <section>
-    <h1>Example page title</h1>
-    <!-- Path to images as from index.html file -->
-    <img src="./img/javascript.svg" alt="" />
-  </section>
-
-  <!-- Loads the specified .html file -->
-  <load="partials\vite-promo.html" />
-
+      <li class="nav-item">
+        <a href="../02-form.html" class="nav-link">Form</a>
+      </li>
+      </ul>
+    </nav>
+  </header>
 </body>
 
 </html>
