--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,12 @@
   <header class="header">
     <nav class="nav">
       <li class="nav-item">
-        <a href="../01-gallery.html" class="nav-link">Gallery</a>
+        <a href="/src/01-gallery.html" class="nav-link">Gallery</a>
       </li>
       </li>
 
       <li class="nav-item">
-        <a href="../02-form.html" class="nav-link">Form</a>
+        <a href="/src/02-form.html" class="nav-link">Form</a>
       </li>
       </ul>
     </nav>
