--- a/src/index.html
+++ b/src/index.html
@@ -3,25 +3,22 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vanilla App Template</title>
+  <title>goit-js-hw-09</title>
   <link rel="stylesheet" href="./css/styles.css" />
-
-
 </head>
 
 <body>
   <header class="header">
+    <h1>goit-js-hw-09</h1>
     <nav class="nav">
-      <li class="nav-item">
-        <a href="./01-gallery.html" class="nav-link">Gallery</a>
-      </li>
-      </li>
-
-      <li class="nav-item">
-        <a href="./02-form.html" class="nav-link">Form</a>
-      </li>
+      <ul class="nav-list">
+        <li class="nav-item">
+          <a href="./01-gallery.html" class="nav-link">Gallery</a>
+        </li>
+        <li class="nav-item">
+          <a href="./02-form.html" class="nav-link">Form</a>
+        </li>
       </ul>
     </nav>
   </header>
