--- a/src/01-gallery.html
+++ b/src/01-gallery.html
@@ -5,14 +5,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gallery</title>
-  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="./css/01-gallery.css" />
   <script type="module" src="./js/01-gallery.js" defer></script>
 </head>
 
 <body>
-  <a href="./index.html">Go to home</a>
-  <h1>Welcome to gallery</h1>
-  <ul class="gallery"></ul>
+  <section>
+    <a href="./index.html">Go to home</a>
+    <h1>Welcome to gallery</h1>
+    <ul class="gallery"></ul>
+  </section>
 </body>
 
 </html>
