--- a/src/02-form.html
+++ b/src/02-form.html
@@ -5,25 +5,26 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Form</title>
-  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="./css/02-form.css" />
   <script type="module" src="./js/02-form.js" defer></script>
 </head>
 
 <body>
-  <a href="./index.html">Go to home</a>
-  <h1>Welcome to form</h1>
-  <form class="feedback-form" autocomplete="off">
-    <label>
-      Email
-      <input class="email-form" type="email" name="email" autofocus />
-    </label>
-    <label>
-      Message
-      <textarea class="message-form " name="message" rows="8"></textarea>
-    </label>
-    <button class="form-button" type="submit">Submit</button>
-  </form>
-
+  <section>
+    <a href="./index.html">Go to home</a>
+    <h1>Welcome to form</h1>
+    <form class="feedback-form" autocomplete="off">
+      <label>
+        Email
+        <input class="email-form" type="email" name="email" autofocus />
+      </label>
+      <label>
+        Message
+        <textarea class="message-form " name="message" rows="8"></textarea>
+      </label>
+      <button class="form-button" type="submit">Submit</button>
+    </form>
+  </section>
 </body>
 
 </html>
